lab_14/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-app-deployment
  labels:
    app: go-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-app
  template:
    metadata:
      labels:
        app: go-app
    spec:
      containers:
        - name: go-app-container
          image: alpine:3.21
          command: ["/bin/sh", "-c"]
          args:
            - |
              echo 'package main
              import ("fmt"; "net/http")
              func main() {
                  http.HandleFunc("/contacts", func(w http.ResponseWriter, r *http.Request) {
                      fmt.Fprint(w, `[{"id":1,"name":"Tony Stark","phone":"099"}]`)
                  })
                  http.ListenAndServe(":8080", nil)
              }' > main.go && apk add go && go run main.go
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
